refactor: restructure project for open source release
- Move source files to src/ directory (bootloader.js, fmtx.js, accx.js)
- Move examples to examples/ directory
- Create dist/ directory for production builds
- Add package.json with build scripts and npm configuration
- Add LICENSE (MIT)
- Add CONTRIBUTING.md with comprehensive guidelines
- Add .eslintrc.json and .prettierrc for code quality
- Add GitHub Actions CI workflow with Lighthouse testing
- Update .gitignore for Node.js project
- Update paths in examples to point to src/

Project now follows standard open source structure ready for GitHub release.

--- a/examples/test-bootloader.html
+++ b/examples/test-bootloader.html
@@ -64,7 +64,7 @@
     </script>
 
     <!-- Load the bootloader (only 1KB!) -->
-    <script src="bootloader.js"></script>
+    <script src="../src/bootloader.js"></script>
 </head>
 <body>
     <h1>genX Universal Bootloader Test</h1>
