--- a/examples/genx-demo.html
+++ b/examples/genx-demo.html
@@ -905,9 +905,140 @@
                     </div>
                 </div>
 
-                <!-- Example 11: Polymorphic Syntax -->
+                <!-- Example 11: Form Validation -->
                 <div class="example" style="grid-column: 1 / -1;">
-                    <h4>11. Polymorphic Syntax - Three Ways to Achieve the Same Result</h4>
+                    <h4>11. Form Validation & State Management</h4>
+                    <p>Complete form validation with real-time feedback, multiple validation rules, and form state tracking.</p>
+                    <div class="example-demo">
+                        <form bx-form id="signup-form" style="max-width: 600px; margin: 0 auto;">
+                            <div style="margin-bottom: 20px;">
+                                <label style="display: block; margin-bottom: 5px; font-weight: 500;">Email <span style="color: #dc3545;">*</span></label>
+                                <input
+                                    type="email"
+                                    bx-model="userEmail"
+                                    bx-validate="required email"
+                                    bx-error-required="Email is required"
+                                    bx-error-email="Please enter a valid email address"
+                                    placeholder="user@example.com"
+                                    style="width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 4px;">
+                                <div class="bx-error-message" style="color: #dc3545; font-size: 0.875rem; margin-top: 5px;"></div>
+                            </div>
+
+                            <div style="margin-bottom: 20px;">
+                                <label style="display: block; margin-bottom: 5px; font-weight: 500;">Username <span style="color: #dc3545;">*</span></label>
+                                <input
+                                    type="text"
+                                    bx-model="username"
+                                    bx-validate="required minLength:3 maxLength:20 alphanumeric"
+                                    bx-error-required="Username is required"
+                                    bx-error-minLength="Username must be at least 3 characters"
+                                    bx-error-maxLength="Username cannot exceed 20 characters"
+                                    bx-error-alphanumeric="Username can only contain letters and numbers"
+                                    placeholder="johndoe"
+                                    style="width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 4px;">
+                                <div class="bx-error-message" style="color: #dc3545; font-size: 0.875rem; margin-top: 5px;"></div>
+                            </div>
+
+                            <div style="margin-bottom: 20px;">
+                                <label style="display: block; margin-bottom: 5px; font-weight: 500;">Age <span style="color: #dc3545;">*</span></label>
+                                <input
+                                    type="number"
+                                    bx-model="userAge"
+                                    bx-validate="required integer min:18 max:120"
+                                    bx-error-required="Age is required"
+                                    bx-error-integer="Age must be a whole number"
+                                    bx-error-min="You must be at least 18 years old"
+                                    bx-error-max="Please enter a valid age"
+                                    placeholder="25"
+                                    style="width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 4px;">
+                                <div class="bx-error-message" style="color: #dc3545; font-size: 0.875rem; margin-top: 5px;"></div>
+                            </div>
+
+                            <div style="margin-bottom: 20px;">
+                                <label style="display: block; margin-bottom: 5px; font-weight: 500;">Website</label>
+                                <input
+                                    type="url"
+                                    bx-model="website"
+                                    bx-validate="url"
+                                    bx-error-url="Please enter a valid URL (e.g., https://example.com)"
+                                    placeholder="https://example.com"
+                                    style="width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 4px;">
+                                <div class="bx-error-message" style="color: #dc3545; font-size: 0.875rem; margin-top: 5px;"></div>
+                            </div>
+
+                            <div style="margin-bottom: 20px;">
+                                <label style="display: flex; align-items: center; cursor: pointer;">
+                                    <input
+                                        type="checkbox"
+                                        bx-model="terms"
+                                        bx-validate="required"
+                                        bx-error-required="You must accept the terms and conditions"
+                                        style="margin-right: 8px;">
+                                    <span>I accept the terms and conditions <span style="color: #dc3545;">*</span></span>
+                                </label>
+                                <div class="bx-error-message" style="color: #dc3545; font-size: 0.875rem; margin-top: 5px;"></div>
+                            </div>
+
+                            <div style="background: #f8f9fa; padding: 15px; border-radius: 4px; margin-bottom: 20px;">
+                                <h5 style="margin: 0 0 10px 0; color: #555;">Form State:</h5>
+                                <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 10px; font-size: 0.875rem;">
+                                    <div>
+                                        <strong>Pristine:</strong> <span bx-bind="formState.pristine" class="formatted-value">true</span>
+                                    </div>
+                                    <div>
+                                        <strong>Dirty:</strong> <span bx-bind="formState.dirty" class="formatted-value">false</span>
+                                    </div>
+                                    <div>
+                                        <strong>Valid:</strong> <span bx-bind="formState.valid" class="formatted-value">false</span>
+                                    </div>
+                                    <div>
+                                        <strong>Invalid:</strong> <span bx-bind="formState.invalid" class="formatted-value">true</span>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div style="display: flex; gap: 10px;">
+                                <button type="submit" style="flex: 1; padding: 12px; background: #28a745; color: white; border: none; border-radius: 4px; font-size: 1rem; cursor: pointer; font-weight: 500;">
+                                    Submit
+                                </button>
+                                <button type="reset" style="flex: 1; padding: 12px; background: #6c757d; color: white; border: none; border-radius: 4px; font-size: 1rem; cursor: pointer; font-weight: 500;">
+                                    Reset
+                                </button>
+                            </div>
+                        </form>
+
+                        <div style="background: #e3f2fd; border-left: 4px solid #2196F3; padding: 15px; border-radius: 4px; margin-top: 30px;">
+                            <h5 style="margin: 0 0 10px 0; color: #1976D2;">✨ Validation Features:</h5>
+                            <ul style="margin: 0; padding-left: 20px; color: #555; line-height: 1.8;">
+                                <li><strong>Real-time validation</strong> - Errors appear as you type</li>
+                                <li><strong>14 built-in rules</strong> - required, email, min/max, minLength/maxLength, pattern, url, number, integer, alpha, alphanumeric, phone</li>
+                                <li><strong>Custom error messages</strong> - bx-error-* attributes</li>
+                                <li><strong>Form state tracking</strong> - pristine/dirty, valid/invalid</li>
+                                <li><strong>CSS classes</strong> - bx-error, bx-valid, bx-pristine, bx-dirty on fields and form</li>
+                                <li><strong>Multiple rules per field</strong> - Space-separated validation rules</li>
+                            </ul>
+                        </div>
+
+                        <div style="margin-top: 20px;">
+                            <h5 style="color: #555; margin-bottom: 10px;">Example Code:</h5>
+                            <pre style="background: #2d2d2d; color: #f8f8f2; padding: 15px; border-radius: 4px; font-size: 11px; overflow-x: auto; line-height: 1.5;">&lt;form bx-form&gt;
+  &lt;input bx-model="email"
+         bx-validate="required email"
+         bx-error-required="Email is required"
+         bx-error-email="Invalid email"&gt;
+
+  &lt;input bx-model="username"
+         bx-validate="required minLength:3 alphanumeric"&gt;
+
+  &lt;button type="submit"&gt;Submit&lt;/button&gt;
+&lt;/form&gt;</pre>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Example 12: Polymorphic Syntax -->
+                <div class="example" style="grid-column: 1 / -1;">
+                    <h4>12. Polymorphic Syntax - Three Ways to Achieve the Same Result</h4>
                     <p>bindX supports multiple notation styles that produce identical behavior. Choose the style that fits your workflow.</p>
                     <div class="example-demo">
                         <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px; margin-bottom: 20px;">
